@@ -1,3 +1,9 @@
+2011-06-26  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/highlighting.c:
+   Recognize C# and Vala raw and verbatim strings as string styles.
+
+
 2011-06-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/callbacks.c, doc/geany.txt, doc/geany.html, README, HACKING,
